--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,11 @@
             <artifactId>webdrivermanager</artifactId>
             <version>3.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
