--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,12 @@ target
 debug.log
 uiDesigner.xml
 
-.idea/
+# .idea folder
+.idea/discord.xml
+.idea/workspace.xml
+.idea/tasks.xml
+
+# target folder
+target
+
+.idea/libraries
